# FMPy

./: azure-pipelines.yml  build_cvode.py  build_remoting.py  setup.py
fmpy/: __init__.py  model_description.py  simulation.py  util.py
fmpy/c-code/: FMI.c
fmpy/fmucontainer/: CMakeLists.txt  __init__.py
fmpy/fmucontainer/sources/: FMUContainer.c
fmpy/gui/: MainWindow.py  __main__.py
fmpy/gui/forms/: MainWindow.ui
remoting/: CMakeLists.txt  build_remoting.py  client.cpp  client_sm.cpp  client_tcp.cpp  client_test.cpp  remoting_sm.h  server.cpp  server_sm.cpp  server_tcp.cpp
src/: CMakeLists.txt
src/fmucontainer/: FMUContainer.c
tests/: remoting_container.py  test_cswrapper.py  test_fmu_container.py  test_fmu_container_bb.py  test_remoting.py
tests/resources/: Ball.fmu  Bounce.fmu  Ticker.fmu
